[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Tower.gd" type="Script" id=2]
[ext_resource path="res://Resource.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.5241, 38.4051 )

[node name="Tower" type="Node2D"]
script = ExtResource( 2 )
Resource = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
